--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
   color: black;
   font-family: 'Roboto', sans-serif;
-  background-color:#F7F9FC;
+  background-color:#fcfcfc;
+  background-image: url("images/trololo1.gif");
 }
 @media (min-width: 1200px) {
   /* For a screen < 960px, this CSS will be read */
@@ -52,12 +53,14 @@ p{
   from {
     margin-left: 100%;
     margin-top: 100%;
-    width: 800px;
+    /* width: 800px;
+    height: 800px; */
   }
 
   to {
     margin-left: 0%;
-    width: 100%;
+    width: 50%;
+    height: 80%;
   }
 }
 
@@ -92,12 +95,13 @@ a:hover{
 }
 
 .card{
-  background-color: white;
+  background-color: rgba(250, 250, 250,0.8);
   padding: 40px;
   box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
   border-radius: 4px;
   margin: 20px 0px;
   text-align: center;
+  /* opacity: 0.8; */
 }
 
 #avatar{
@@ -117,4 +121,8 @@ a:hover{
   display: inline;
   padding: 10px;
   font-size: 3em;
+}
+
+iframe{
+  border-radius: 50%;
 }
